# enigma2

./: .gitignore  .travis.yml  ChangeLog  ChangeLogRelease  Makefile.am  Navigation.py  PEP8.sh  PowerTimer.py  README  README.md  RecordTimer.py  ServiceReference.py  bootstrap.py  configure.ac  dm9x0.patch  doxy.conf  e2reactor.py  enigma2.bb  fcc.patch  fi.po  keyids.py  lamedb  lamedb5  mytest.py  skin.py  timer.py  upgrade.py
data/: Makefile.am  convert-iso-639-3.py  encoding.conf  keymap.xml  keytranslation.xml  menu.xml  networkwizard.xml  rcpositions.xml  recovery.xml  setup.xml  skin.xml  skin_default.xml  skin_display_7segment.xml  skin_display_default.xml  skin_display_gb7252.xml  skin_display_gbquad4k.xml  skin_display_vuduo2.xml  skin_subtitles.xml  startwizard.xml  unicable.xml  videowizard.xml  vuwizard.xml
data/7segment/: skin_display.xml
data/defaults/: Makefile.am
data/display/: Makefile.am  skin_display_default.xml  skin_display_gbquad4k.xml  skin_display_vuduo2.xml  skin_text_7segment.xml  skin_text_default.xml
data/display/displaytext/: skin_display.xml
data/display/lcd400/: Makefile.am
data/display/lcd_skin220/: clock_lcd_analog.xml  clock_lcd_analog_blue.xml  clock_lcd_analog_gb.xml  clock_lcd_analog_rail.xml  clock_lcd_analog_red.xml  clock_lcd_analog_white.xml  clock_lcd_digital_blue.xml  clock_lcd_digital_blue_large.xml  clock_lcd_digital_flipClock.xml  clock_lcd_digital_red.xml  clock_lcd_digital_red_large.xml  clock_lcd_digital_white.xml  clock_lcd_digital_white_large.xml  common.xml  skin_lcd_default.xml  skin_lcd_no_picon_1.xml  skin_lcd_no_picon_2.xml  skin_lcd_picon.xml  skin_lcd_picon_1.xml  skin_lcd_picon_2.xml  skin_lcd_picon_3.xml  skin_lcd_picon_4.xml  skin_lcd_picon_5.xml  skin_lcd_picon_6.xml
data/display/lcd_skin400/: Makefile.am  clock_lcd_analog.xml  clock_lcd_analog_blue.xml  clock_lcd_analog_gb.xml  clock_lcd_analog_rail.xml  clock_lcd_analog_red.xml  clock_lcd_analog_white.xml  clock_lcd_digital.xml  clock_lcd_digital_blue_large.xml  clock_lcd_digital_flipClock.xml  clock_lcd_digital_red.xml  clock_lcd_digital_red_large.xml  clock_lcd_digital_white.xml  clock_lcd_digital_white_large.xml  common.xml  skin_lcd_default.xml  skin_lcd_no_picon_1.xml  skin_lcd_no_picon_2.xml  skin_lcd_picon.xml  skin_lcd_picon_1.xml  skin_lcd_picon_2.xml  skin_lcd_picon_3.xml  skin_lcd_picon_4.xml  skin_lcd_picon_5.xml  skin_lcd_picon_6.xml
data/display/vfd255/: skin_display.xml  skin_display_picon.xml
data/display128/: Makefile.am  skin_display.xml
data/display220/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display390/: skin_display.xml  skin_display_picon.xml
data/display400/: skin_display.xml  skin_display_picon.xml
data/display480/: skin_display.xml  skin_display_picon.xml
data/display720/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display720/Default_with_Analogue_Clock_Standby/: skin_display.xml
data/display720/Default_with_Picon_Fullscreen/: skin_display.xml
data/display720/Default_with_Picon_Fullscreen_and_Analogue_Clock_Standby/: Makefile.am  skin_display.xml
data/display720/Default_with_Picon_and_Analogue_Clock_Standby/: skin_display.xml
data/display800/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display800/Default_with_Picon_Fullscreen/: Makefile.am  skin_display.xml
data/display96/: skin_display.xml
data/displaytext/: Makefile.am  skin_display.xml
data/fonts/: Makefile.am
data/gbipbox/: startwizard.xml
data/lcd_skin220/: clock_lcd_digital.xml  clock_lcd_digital_blue_large.xml  clock_lcd_digital_flipClock.xml  skin_lcd_default.xml  skin_lcd_picon_6.xml
data/lcd_skin400/: clock_lcd_digital_red.xml  clock_lcd_digital_white_large.xml  skin_lcd_picon_5.xml  skin_lcd_picon_6.xml
data/skin_default/: Makefile.am  skin.xml
data/skin_default/icons/: Makefile.am
data/vfd128/: Makefile.am  skin_display.xml
data/vfd140/: skin_display.xml
data/vfd255/: skin_display.xml  skin_display_picon.xml
lib/python/: BoxBrandingTest.py  Makefile.am  Navigation.py  PowerTimer.py  RecordTimer.py  ServiceReference.py  Session.py  StartEnigma.py  Startup.py  connections.h  e2reactor.py  enigma_python.i  keyids.py  keymapparser.py  python.cpp  python.h  python_base.i  python_console.i  python_pcore.i  skin.py  timer.py  upgrade.py
lib/python/Components/: AVSwitch.py  About.py  ActionMap.py  Button.py  ChannelsImporter.py  ChoiceList.py  ClientMode.py  Clock.py  ConditionalWidget.py  ConfigList.py  Console.py  DiskInfo.py  Element.py  EpgBouquetList.py  EpgConfig.py  EpgList.py  EpgListBase.py  EpgListGrid.py  EpgListMulti.py  EpgListSingle.py  EpgLoadSave.py  EpgSelection.py  FIFOList.py  FanControl.py  FileList.py  GUIComponent.py  HTMLComponent.py  Harddisk.py  HdmiCec.py  HdmiRecord.py  HelpMenuList.py  ImportChannels.py  Input.py  InputDevice.py  InputHotplug.py  Ipkg.py  Keyboard.py  Label.py  Language.py  Language_cache.py  (+53 more)
lib/python/Plugins/: Plugin.py  newplugin.py
lib/python/Screens/: About.py  AboutBoxInfo.py  AboutUserInstalledPlugins.py  AudioSelection.py  AutoDiseqc.py  ButtonSetup.py  CCcamInfo.py  ChannelSelection.py  ChoiceBox.py  Ci.py  ClientMode.py  ClockDisplay.py  ConfigMenu.py  Console.py  CopyFiles.py  CronTimer.py  DVD.py  Dish.py  EpgSelection.py  EpgSelectionBase.py  EpgSelectionChannel.py  EpgSelectionGrid.py  EpgSelectionInfobarGrid.py  EpgSelectionInfobarSingle.py  EpgSelectionMulti.py  EpgSelectionSimilar.py  EpgSelectionSingle.py  EventView.py  FactoryReset.py  FallbackTunerSetup.py  FixedMenu.py  GitCommitInfo.py  Globals.py  H9SDswap.py  HarddiskSetup.py  HelpMenu.py  Hotkey.py  InfoBar.py  InfoBarGenerics.py  InputBox.py  (+76 more)
lib/python/Tools/: ASCIItranslit.py  Alternatives.py  BoxConfig.py  CIHelper.py  CopyFiles.py  Directories.py  Downloader.py  FallbackTimer.py  FlashInstall.py  FuzzyDate.py  General.py  Geolocation.py  GetEcmInfo.py  HardwareInfo.py  Hex2strColor.py  ISO639.py  KeyBindings.py  LoadPixmap.py  Multiboot.py  Notifications.py  NumericalTextInput.py  Profile.py  (+10 more)
(+600 files in other folders)
