installdir = $(pkglibdir)/python

SUBDIRS = Components Tools Screens Plugins

install_PYTHON = upgrade.py \
	e2reactor.py \
	GlobalActions.py \
	keyids.py \
	keymapparser.py \
	Navigation.py \
	NavigationInstance.py \
	PowerTimer.py \
	RecordTimer.py \
	ServiceReference.py \
	skin.py \
	startup.py \
	timer.py

