installdir = $(pkglibdir)/python

SUBDIRS = Components Tools Screens Plugins

install_PYTHON = \
	BoxBrandingTest.py \
	e2reactor.py \
	GlobalActions.py \
	keyids.py \
	keymapparser.py \
	Navigation.py \
	NavigationInstance.py \
	RecordTimer.py \
	ServiceReference.py \
	skin.py \
	StartEnigma.py \
	timer.py
